// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Geo Filters 2 Facets configured, no filters 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "type": Object {
          "terms": Object {
            "field": "type",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "geo_bounding_box": Object {
            "location": Object {
              "bottom_right": Object {
                "lat": 40.01,
                "lon": -55.12,
              },
              "top_left": Object {
                "lat": 50.73,
                "lon": -75.1,
              },
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Geo Filters 2 Facets configured, no filters 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 3120,
          "label": "Movie",
        },
        Object {
          "count": 521,
          "label": "Episode",
        },
        Object {
          "count": 473,
          "label": "Series",
        },
        Object {
          "count": 48,
          "label": "Game",
        },
      ],
      "identifier": "type",
      "label": "type",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "bottomRight": Object {
          "lat": 40.01,
          "lon": -55.12,
        },
        "display": "GeoBoundingBoxFilter",
        "id": "location_{\\"topLeft\\":{\\"lat\\":50.73,\\"lon\\":-75.1},\\"bottomRight\\":{\\"lat\\":40.01,\\"lon\\":-55.12}}",
        "identifier": "location",
        "label": "Location",
        "topLeft": Object {
          "lat": 50.73,
          "lon": -75.1,
        },
        "type": "GeoBoundingBoxSelectedFilter",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Geo Filters 2 Facets configured, no filters 4`] = `
Object {
  "_source": Object {
    "includes": Array [
      "actors",
      "writers",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "type": Object {
          "terms": Object {
            "field": "type",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "type": "Movie",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "type": "Movie",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "geo_bounding_box": Object {
            "location": Object {
              "bottom_right": Object {
                "lat": 40.01,
                "lon": -55.12,
              },
              "top_left": Object {
                "lat": 50.73,
                "lon": -75.1,
              },
            },
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;
